<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/scrollView1"
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    >

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/hello"
    android:textSize="34sp" />

<TextView
    android:id="@+id/pageUrl_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/url_label"
    android:textSize="20sp" />

<EditText
    android:id="@+id/pocheUrl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="text"
    android:linksClickable="false"
    android:maxLines="1"
    android:scrollHorizontally="false" >

    <requestFocus />
</EditText>

<TextView android:id="@+id/instructions" android:layout_width="wrap_content" android:text="@string/instructions" android:layout_height="wrap_content" android:layout_marginTop="@dimen/toppadding" android:textSize="25sp" android:paddingTop="5sp" android:paddingBottom="30sp"></TextView>

<TextView
    android:id="@+id/author"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/author" />

<Button android:layout_width="wrap_content" android:id="@+id/btnDone" android:layout_height="wrap_content" android:text="@string/btnDone"></Button>
</LinearLayout>
</ScrollView>