<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pageUrl_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/url_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/url_help" />

        <EditText
            android:id="@+id/pocheUrl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="textUri"
            android:linksClickable="false"
            android:maxLines="1"
            android:scrollHorizontally="false" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toppadding"
            android:layout_weight="1"
            android:autoLink="web"
            android:paddingTop="5sp"
            android:text="@string/instructions" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnDone" />
        
        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/author"
            android:textSize="10sp" />
                
    </LinearLayout>

</LinearLayout>
