<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="fr.gaulupeau.apps.Poche.Poche">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/hello"
            android:textSize="25sp"
            android:visibility="gone" />

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="6sp"
            android:layout_marginTop="6sp"
            android:layout_weight="0"
            android:background="#000000" />

        <Button
            android:id="@+id/btnGetPost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnGetPost" />

        <Button
            android:id="@+id/btnSync"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSync" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSettings"/>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>